# ExaltAccountManager

./: .gitignore  CODE_OF_CONDUCT.md  CheckSum.txt  Developer.md  EAM.sln  EAMNotificationMessage  EAM_BackupTool.bat  README.md  bun.lockb  index.html  package-lock.json  package.json  updateDeps.ps1  vite.config.js
.github/: FUNDING.yml
EAM Daily Login Service/: DailyLogin.cs  DailyLoginOLD.cs  EAM Daily Login Service.csproj
EAM PingChecker/: App.config  ColorScheme.cs  EAM PingChecker.csproj  FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  Program.cs  UIAbout.Designer.cs  UIAbout.cs  UIDashboard.Designer.cs  UIDashboard.cs  UIDashboard.resx  UIOptions.Designer.cs  UIOptions.cs  UIOptions.resx  packages.config
EAM Statistics/: App.config  EAM Statistics.csproj  FrmCharHost.Designer.cs  FrmCharHost.cs  FrmCharHost.resx  FrmMain.Designer.cs  FrmMain.cs  FrmMain.resx  FrmShadowHost.Designer.cs  FrmShadowHost.cs  FrmStatsLeftHost.Designer.cs  FrmStatsLeftHost.cs  FrmStatsLeftHost.resx  Program.cs  TopAccountListEntry.Designer.cs  TopAccountListEntry.cs  UIAbout.Designer.cs  UIAbout.cs  UIAbout.resx  UIAccountView.Designer.cs  UIAccountView.cs  UIAccountView.resx  UIAccountViewer.Designer.cs  UIAccountViewer.cs  UIAccountViewer.resx  UICharacterViewer.Designer.cs  UICharacterViewer.cs  UICharacterViewer.resx  UIDashboard.Designer.cs  UIDashboard.cs  UIStatsLeft.Designer.cs  UIStatsLeft.cs  UIStatsLeft.resx  packages.config
EAM Tasktray Tool/: App.config  EAM Tasktray Tool.csproj  EAM_ProgressBar.cs  FrmTaskTray.cs  (+9 more)
src-modules/daily-auto-login/src-tauri/: Cargo.toml  tauri.conf.json
src-modules/daily-auto-login/src-tauri/capabilities/: migrated.json
src-modules/daily-auto-login/src-tauri/src/: main.rs
src-modules/daily_auto_login/: Cargo.toml
src-modules/daily_auto_login/src/: diesel_functions.rs  diesel_setup.rs  encryption_utils.rs  main.rs
src-modules/eam_commons/: Cargo.toml
src-modules/eam_commons/migrations/2024-02-14-204423_migrationV1/: down.sql  up.sql
src-modules/eam_commons/migrations/2024-02-15-194717_migrationV2/: down.sql  up.sql
src-modules/eam_commons/migrations/2024-03-23-204621_migrationV3/: down.sql  up.sql
src-modules/eam_commons/migrations/2024-07-11-184839_migrationV7/: down.sql  up.sql
src-modules/eam_commons/src/: diesel_functions.rs  diesel_setup.rs  encryption_utils.rs  lib.rs  models.rs  rotmg_updater.rs  schema.rs  windows_specifics.rs
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-02-14-204423_migrationV1/: down.sql  up.sql
src-tauri/migrations/2024-02-15-194717_migrationV2/: down.sql  up.sql
src-tauri/src/: diesel_definition.rs  diesel_functions.rs  encryption_utils.rs  main.rs  models.rs  schema.rs
src-tauri/windows/: LICENSE
src-tauri/windows/nsis/images/: header.pdn  sidebar.pdn
src-tauri/windows/nsis/template/: default.nsi  installer.nsi
src-tauri/wix/fragments/: CustomInstallDir.wxs  RedirectApplicationFolder.wxs  TargetDirOverride.wxs
src-tauri/wix/images/: banner.pdn  dialog.pdn
src-tauri/wix/template/: main.wxs
t-src-modules/daily-auto-login/src-tauri/: Cargo.toml  tauri.conf.json
t-src-modules/daily-auto-login/src-tauri/capabilities/: desktop.json
t-src-modules/daily-auto-login/src-tauri/src/: main.rs
t-src-modules/daily_auto_login_cli/: Cargo.toml
t-src-modules/daily_auto_login_cli/src/: main.rs
t-src-modules/eam_background_sync/: Cargo.toml
t-src-modules/eam_background_sync/src/: account_verify.rs  char_list.rs  config.rs  daily_login.rs  events.rs  lib.rs  manager.rs  process_account.rs  types.rs  utils.rs
t-src-modules/eam_commons/: .gitignore  Cargo.toml  architecture-def.json
t-src-modules/eam_commons/migrations/2024-02-14-204423_migrationV1/: up.sql
t-src-modules/eam_commons/migrations/2024-02-15-194717_migrationV2/: up.sql
t-src-modules/eam_commons/migrations/2024-03-31-005203_migrationV4/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2024-05-17-005637_migrationV5/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2024-07-04-230126_migrationV6/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2024-09-18-000302_migrationV8/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2025-03-04-234124_migrationV9/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2025-06-17-233446_migrationV10/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2025-10-09-210639_migrationV11/: up.sql
t-src-modules/eam_commons/migrations/2026-01-27-120000_add_servers_table/: down.sql  up.sql
t-src-modules/eam_commons/migrations/2026-01-28-120000_add_parsed_items_and_pc_stats/: down.sql  up.sql
t-src-modules/eam_commons/src/: diesel_functions.rs  diesel_setup.rs  encryption_utils.rs  hwid.rs  lib.rs  models.rs  paths.rs  rotmg_updater.rs  schema.rs  utils.rs  windows_specifics.rs
t-src-modules/eam_commons/src/background_syncer/: account_verify.rs  char_list.rs  config.rs  events.rs  manager.rs  mod.rs  process_account.rs  types.rs  utils.rs
t-src-modules/eam_commons/src/daily_login_task/: com.exaltaccountmanager.dailylogin.plist  macos.rs  mod.rs  windows.rs
t-src-modules/eam_commons/src/encryption_utils/: macos.rs  mod.rs  windows.rs
t-src-modules/eam_commons/src/hwid/: macos.rs  mod.rs  windows.rs
t-src-modules/eam_commons/src/limiter/: api_limiter.rs  global_api_limiter.rs  manager.rs  mod.rs
t-src-modules/eam_commons/src/parser/: character_stats.rs  character_stats_mapper.rs  mod.rs  parser.rs  request_state_parser.rs  server_parser.rs
t-src-modules/eam_commons/src/requests/: account_verify.rs  char_list.rs  mod.rs  types.rs
t-src-modules/eam_commons/src/toast_notifications/: content.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
t-src-modules/eam_plus_lib_mock/: .gitignore  Cargo.toml
t-src-modules/eam_plus_lib_mock/src/: constants.rs  eam_subscriptions_api_utils.rs  eam_user_api_utils.rs  lib.rs  user_status_utils.rs
t-src-modules/eam_plus_lib_mock/src/daily_login/: daily_login.rs  mod.rs
(+789 files in other folders)
