[package]
name = "exalt-account-manager"
version = "4.2.3"
description = "Exalt Account Manager is a powerful toolset designed to streamline multi-account management for Realm of the Mad God."
homepage = "https://exaltaccountmanager.com"
authors = ["MaikEight"]
license = "GPL-3.0 license"
repository = "https://github.com/MaikEight/ExaltAccountManager"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools", "macos-private-api"] }
tauri-plugin = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-drpc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.13"
window-vibrancy = "0.6.0"
dirs = "6.0.0"
md5 = "0.7.0"
tokio = "1.44.2"
futures = "0.3.31"
flate2 = "1.1.1"
walkdir = "2.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
zip = "2.6.1"
mpsc = "0.2.5"
anyhow = "1.0"
curl = "0.4"
wmi = "0.17.1"
sha1 = "0.10.6"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt", "winbase"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
hex = "0.4.3"
diesel = { version = "2.2.10", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.2.0"
diesel_derives = "2.2.5"
lazy_static = "1.5.0"
uuid = "1.16.0"
base64 = "0.22.1"
h2 = "0.4.9"
mio = "1.0.3"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
log = "0.4"
simplelog = "0.12.2"
winreg = "0.55.0"
open = "5.3.2"

eam_commons = { path = "../t-src-modules/eam_commons" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.7.1"
