[package]
name = "exalt-account-manager"
version = "4.2.7"
description = "Exalt Account Manager is a powerful toolset designed to streamline multi-account management for Realm of the Mad God."
homepage = "https://exaltaccountmanager.com"
authors = ["MaikEight"]
license = "GPL-3.0 license"
repository = "https://github.com/MaikEight/ExaltAccountManager"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.8.3", features = ["devtools", "macos-private-api", "tray-icon"] }
tauri-plugin = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2.3.2", features = ["deep-link"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-drpc = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-std = "1.13"
window-vibrancy = "0.6"
dirs = "6.0"
md5 = "0.8"
tokio = "1.47"
futures = "0.3"
flate2 = "1.1"
walkdir = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
zip = "4.5"
mpsc = "0.2.6"
anyhow = "1.0"
curl = "0.4"
wmi = "0.17"
sha1 = "0.10"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt", "winbase"] }
num-bigint = "0.4"
num-traits = "0.2.19"
hex = "0.4"
diesel = { version = "2.2.12", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.2.0"
diesel_derives = "2.2.7"
lazy_static = "1.5.0"
uuid = "1.18"
base64 = "0.22"
h2 = "0.4.12"
mio = "1.0.4"
libsqlite3-sys = { version = "0.33.0", features = ["bundled"] }
log = "0.4"
simplelog = "0.12"
winreg = "0.55.0"
open = "5.3"
chrono = { version = "0.4", features = ["serde"] }

eam_commons = { path = "../t-src-modules/eam_commons" }
eam_background_sync = { path = "../t-src-modules/eam_background_sync" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.9.0"
