[package]
name = "daily_auto_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["blocking"] }
diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.1.0"
diesel_derives = "2.1.3"
libsqlite3-sys = { version = "*", features = ["bundled"] }
lazy_static = "1.4.0"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt"] }
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
roxmltree = "0.19.0"
tokio = { version = "1", features = ["full"] }
wmi = "0.13.1"
sha1 = "0.10.6"