[package]
name = "daily_auto_login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0.1"
reqwest = { version = "0.12.2", features = ["blocking"] }
lazy_static = "1.4.0"
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
roxmltree = "0.19.0"
tokio = { version = "1", features = ["full"] }
wmi = "0.13.1"
sha1 = "0.10.6"
uuid = "1.8.0" 
eam_commons = { path = "../eam_commons" }