[package]
name = "eam_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wmi = "0.13.1"
sha1 = "0.10.6"
base64 = "0.22.0"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt"] }
diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.1.0"
diesel_derives = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.35", features = ["serde"] }
windows-service = "0.6.0"
dirs = "5.0.1"