[package]
name = "eam_commons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wmi = "0.13.1"
sha1 = "0.10.6"
base64 = "0.22.0"
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt"] }
diesel = { version = "2.1.5", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.1.0"
diesel_derives = "2.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.35", features = ["serde"] }
windows-service = "0.6.0"
dirs = "5.0.1"
md5 = "0.7.0"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
futures = "0.3.29"
flate2 = "1.0.28"
tokio = { version = "1.37.0", features = ["full"] }
roxmltree = "0.19.0"
zip = "0.6.6"
thiserror = "1.0.60"
log = "0.4"