[package]
name = "eam_commons"
version = "0.2.1"
homepage = "https://exaltaccountmanager.com"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3.6", features = ["sqlite", "r2d2", "64-column-tables"] }
diesel_migrations = "2.3.1"
diesel_derives = "2.3.7"
dirs = "6.0"
flate2 = "1.1"
function_name = "0.3"
futures = "0.3"
glob = "0.3.3"
lazy_static = "1.5"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
log = "0.4"
md5 = "0.8"
reqwest = { version = "0.13", features = ["blocking", "json"] }
roxmltree = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha1 = "0.10"
thiserror = "2.0"
tokio = { version = "1.50", features = ["full"] }
uuid = { version = "1.21", features = ["serde", "v4"] }
zeroize = "1.8"
zip = "8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "processthreadsapi", "securitybaseapi", "handleapi", "sddl", "dpapi", "wincrypt", "errhandlingapi", "winbase"] }
wmi = "0.17.3"
windows = { version = "0.62", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Storage_EnhancedStorage",
] }

[target.'cfg(target_os = "macos")'.dependencies]
anyhow = "1"
core-foundation = "0.10"
libc = "0.2"
security-framework = "3.7"
security-framework-sys = "2.17"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSDate", "NSError", "NSCalendar", "NSDictionary", "NSArray", "NSSet", "NSObject", "NSValue", "NSBundle"] }
block2 = "0.6"
objc2-user-notifications = { version = "0.3", features = ["block2", "UNUserNotificationCenter", "UNNotificationContent", "UNNotificationTrigger", "UNNotificationRequest", "UNNotificationAttachment", "UNNotificationAction", "UNNotificationCategory", "UNNotificationSettings", "UNNotificationSound"] }
