[package]
name = "eam_plus_lib"
version = "0.1.4"
description = "EAM Plus library mock. This is to enable other developers to develop and build EAM, just without the Plus features."
homepage = "https://exaltaccountmanager.com"
authors = ["MaikEight"]
license = "GPL-3.0 license"
publish = false
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
jsonwebtoken = "9.3"
thiserror = "2"
lazy_static = "1.5.0"
dirs = "6.0.0"
roxmltree = "0.20.0"
eam_commons = { path = "../eam_commons" }