[package]
name = "eam_plus_lib"
version = "0.1.4"
description = "EAM Plus library mock. This is to enable other developers to develop and build EAM, just without the Plus features."
homepage = "https://exaltaccountmanager.com"
authors = ["MaikEight"]
license = "GPL-3.0 license"
publish = false
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
jsonwebtoken = "10.3"
thiserror = "2"
lazy_static = "1.5.0"
dirs = "6.0.0"
roxmltree = "0.21"
eam_commons = { path = "../eam_commons" }