[package]
name = "daily-auto-login"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-unmaximize", "process-all", "fs-all", "dialog-all", "window-maximize", "window-start-dragging", "window-close", "window-show", "window-set-min-size", "path-all", "window-unminimize", "http-all", "window-hide", "window-minimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
